--- a/templates/help.html
+++ b/templates/help.html
@@ -1,13 +1,14 @@
-<html>
-<head>
-  <title>golinks</title>
-  <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="search">
-</head>
-<body>
-	<h1>Help</h1>
-	<p>
-	This is a smart bookmarks web app designed to make accessing internal
-	and external resources easier as well as providing a way to build all
-	sort of convenient tools.
-	</p>
-</body>
+{{define "content"}}
+<section class="container">
+  <div class="columns">
+    <div class="column">
+      <h1>Help</h1>
+      <p>
+      This is a smart bookmarks web app designed to make accessing internal
+      and external resources easier as well as providing a way to build all
+      sort of convenient tools.
+      </p>
+    </div>
+  </div>
+</section>
+{{end}}
