--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,15 @@
-<html>
-	<head>
-		<title>golinks</title>
-		<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="search">
-	</head>
-	
-	<body>
-		<p>
-		<form>
-			<input type="text" name="q">
-			<input type="submit">
-		</form>
-		</p>
-	</body>
-
-</html>
+{{define "content"}}
+<section class="container">
+  <div class="columns">
+    <div class="column">
+      <form action="" method="POST">
+        <div class="form-group input-group">
+          <label class="form-label" for="input-q"></label>
+          <input class="form-input" id="input-q" type="text" name="q" placeholder="Enter command, bookmark or search terms here...">
+          <button class="btn btn-primary" type="submit">Go</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+{{end}}
